Complete VM, codepool, help classes generation. Complete original class methods replacement. Supported basic mathematics bytecodes such as iadd isub etc. Can obfuscate now.